# python_project_template

./: .gitignore  .pre-commit-config.yaml  .vimrc  .vimspector.json  LICENSE  README.md  Update-PythonVenv.ps1  pyproject.toml  python_project_template.py  requirements.txt  tox.ini
src/python_project_template/: __init__.py  chores.py  latest_python_version.py  main.py  main_setuptools.py  main_uv.py  paths.py  project_files.py  user_input.py
tests/: __init__.py  conftest.py
