[project]
name = "python-project-template"
version = "0.1.0"
description = "my standard Python project template for setuptools or uv"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shay Hill", email = "shay_public@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "tox>=4.30.3",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["tests"]
log_cli = 1

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311,312,313}

[testenv]
deps = pytest
commands = pytest
"""

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.9"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"
