[project]
name = "python-project-template"
version = "0.1.0"
description = "my standard Python project template"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shay Hill", email = "shay_public@hotmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pre-commit>=4.6.0",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = "tests"
testpaths = ["tests"]
log_cli = true


[tool.ruff]
exclude = ["typings", ".venv"]
[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "D",
    "F401",
] # Ignore assertions, docstrings, unused imports in test files

[tool.ruff.format]
docstring-code-line-length = 88

[tool.ruff.lint]

select = ["ALL"]

ignore = [
    "PLR",  # magic values
    "COM",  # trailing commas
    "ANN",  # forbid Any
    "S",    # warnings about pickle, random, etc.
    "N",    # names
    "B019", # memory leak warning for lru_cache
    "D4",   # first line should end with a period, etc.
]


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]
ignore = ["typings", ".venv"]

pythonVersion = "3.11"
pythonPlatform = "All"

typeCheckingMode = "strict"
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"
